src/css/zro.css
a {
  color:#080; /* blue links are so overrated, green ftw */
  text-decoration:none;
}
a:hover {
  color:#0d0;
}
abbr {
  cursor:help;
  text-decoration: dotted underline;
}
address {
  cursor:pointer;
  font-size: 12px;
  font-family: "Times New Roman", Times;
}
article {
  cursor:auto;
}
aside {
  cursor:auto;
}
b {
  cursor:auto;
  font-size: 20px;
}
blockquote {
  cursor:auto;
  font-style: italic;
  color: #555;
  padding: 20px;
}
body {
  cursor:auto;
}
button {
  cursor:pointer;
  border-radius:4px;
  -moz-border-radius:4px;
  -webkit-border-radius:4px;
}
button:hover {
  
}
canvas {
  cursor:crosshair;
}
caption {
  cursor:help;
  font-style: italic;
}
cite {
  cursor:help;
  font-style: italic;
}
code {
  font-family: "Consolas","Courier New",monospace;
}
col {
  
}
colgroup {
  
}
datalist {
  
}
dd {
  
}
del {
  
}
details {
  /* Not implemented in FF or Edge yet */
}
dfn {
  font-style: bold;
}
dialog {
  /* Not implemented in FF or Edge yet */
}
div {
  padding: 10px;
}
div.pagewrapper {
  margin-left: 200px;
  margin-bottom: 100px;
  padding: 20px;
}
dl {
  
}
dt {
  
}
em {
  font-style: bold italic underline;
}
fieldset {
  margin-right: 5px;
  margin-left: 5px;
  margin-top: 10px;
  margin-bottom: 10px;
}
figcaption {
  cursor:help;
}
figure {
  
}
footer {
  cursor:auto;
  text-align: center;
  display: inline;
  background-color: #efefef;
  position: fixed;
  margin-left: 150px;
  padding: 20px;
  left: 0px;
  bottom: 0px;
  width: 100%;
  height: 50px;
  font-size: 12px;
}
form {
  padding: 5px;
}
h1 {
  text-align: center;
  font-size: 48px;
}
h2 {
  text-align: center;
  color: #555;
  font-size: 24px;
}
h3 {
  text-align: center;
  font-size: 18px;
}
h4 {
  
}
h5 {
  
}
h6 {
  
}
header {
  text-align: left;
  display: inline;
  background-color: #efefef;
  position: fixed;
  padding: 20px;
  left: 0x;
  top: 0px;
  bottom: 0px;
  width: 150px;
  height: 100%;
  font-size: 12px;
}
hr {
  margin: 20px;
}
html {
  font-family: "Segoe UI", Arial, sans-serif;
  /* font-family: "Comic Sans MS", Arial, sans; */
  font-size: 18px;
}
iframe {
  
}
img {
  
}
img.large-thumbnail {
  width: 240px;
  height: 180px;
}
img.thumbnail {
  width: 120px;
  height: 90px;
}
img.small-thumbnail {
  width: 80px;
  height: 60px;
}
input {
  font-family: "Showcard Gothic","Cooper Black","Comic Sans MS",Arial; /* lol sorry not sorry */
}
input[type=text] {
  
}
input[type=checkbox] {
  
}
input[type=radio] {
  
}
input[type=submit] {
  font-family: "Segoe UI",Arial,sans-serif;
}
ins {
  font-style: underline;
}
kbd {
  
}
keygen {
  
}
label {
  
}
legend {
  
}
li {
  margin-top: 5px;
  margin-bottom: 5px;
}
link {
  
}
main {
  
}
map {
  
}
mark {
  
}
menu {
  
}
menuitem {
  
}
meter {
  
}
nav {
  
}
noscript {
  
}
object {
  
}
ol {
  
}
optgroup {
  
}
option {
  
}
output {
  
}
p {
  
}
pre {
  
}
progress {
  
}
q {
  
}
s {
  
}
samp {
  
}
select {
  
}
small {
  
}
span {
  display: block;
  margin: 5px;
}
strong {
  
}
sub {
  
}
summary {
  
}
sup {
  
}
table {
  
}
tbody {
  
}
td {
  
}
textarea {
  
}
tfoot {
  
}
th {
  
}
thead {
  
}
time {
  
}
title {
  
}
tr {
  
}
u {
  
}
ul {
  
}
var {
  
}
video {
  
}
.textleft {
  text-align: left;
}
.textright {
  text-align: right;
}
.textcentered {
  text-align: center;
}
.bolded {
  font-style: bold;
}
.italicized {
  font-style: italic;
}
.underlined {
  text-decoration: underline;
}
.widekerning {
  letter-spacing: 0.4em;
}
.fixed {
  position: fixed;
}
.block {
  display: block;
}
.pointer {
  cursor: pointer;
}
.help {
  cursor: help;
}
.black {
  color: black;
}
.darkdarkgray {
  color: #222;
}
.darkgray {
  color: #555;
}
.gray {
  color: gray;
}
.lightgray {
  color: #aaa;
}
.lightlightgray {
  color: #ddd;
}
.white {
  color: white;
}
.smallcaps {
  font-variant: small-caps;
}
.allcaps {
  text-transform: uppercase;
}
.ln {
  display: inline;
}
.nodot {
  list-style: none;
}
.warning {
  color: #F00;
}

